v0.0.0.21: reorganize config with Debugging section
Move debug and testModeOnlyBookshelf to [Debugging] and default
blockedInputItems to an empty list.